--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,15 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@inproceedings{unwin2000,
+  title={Visualisation for data mining},
+  author={Unwin, Antony},
+  booktitle={International Conference on Data Mining, Visualization and Statistical System, S{\'e}oul, Korea},
+  year={2000},
+  organization={Citeseer}
+}
+
+
 @article{wills2000,
   title={Natural selection: interactive subset creation},
   author={Wills, Graham J},
@@ -3259,6 +3268,62 @@
   institution	= {School of Statistics Report}
 }
 
+@inproceedings{urbanek2001,
+  title={Making trees interactive-KLIMT},
+  author={Urbanek, Simon and Unwin, Antony R},
+  booktitle={Proc. of the 33th Symposium of the Interface of Computing Science and Statistics},
+  year={2001},
+  organization={Citeseer}
+}
+
+@inproceedings{urbanek2002,
+  title={Different ways to see a tree-KLIMT},
+  author={Urbanek, Simon},
+  booktitle={Compstat: Proceedings in Computational Statistics},
+  pages={303--308},
+  year={2002},
+  organization={Springer}
+}
+
+ @Manual{lee2021,
+    title = {liminal: Multivariate Data Visualization with Tours and Embeddings},
+    author = {Stuart Lee},
+    year = {2021},
+    note = {R package version 0.1.2},
+    url = {https://CRAN.R-project.org/package=liminal},
+  }
+
+  @book{bishop2006,
+  title={Pattern recognition and machine learning},
+  author={Bishop, Christopher M and Nasrabadi, Nasser M},
+  volume={4},
+  number={4},
+  year={2006},
+  publisher={Springer}
+}
+
+
+  @article{cook1995,
+  title={Grand tour and projection pursuit},
+  author={Cook, Dianne and Buja, Andreas and Cabrera, Javier and Hurley, Catherine},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={4},
+  number={3},
+  pages={155--172},
+  year={1995},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{lee2022,
+  title={Casting multiple shadows: interactive data visualisation with tours and embeddings},
+  author={Lee, Stuart and Laa, Ursula and Cook, Dianne},
+  journal={Journal of Data Science, Statistics, and Visualisation},
+  volume={2},
+  number={3},
+  year={2022}
+}
+
 @Book{		  tierney1990,
   title		= {Lisp-stat: an object-oriented environment for statistical
 		  computing and dynamic graphics},
@@ -3459,6 +3524,27 @@
   year		= {2008},
   pages		= {832-852},
   publisher	= {Springer Science \& Business Media}
+}
+
+@article{unwin1996,
+  title={Interactive graphics for data sets with missing values—MANET},
+  author={Unwin, Antony and Hawkins, George and Hofmann, Heike and Siegl, Bernd},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={5},
+  number={2},
+  pages={113--122},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{unwin2006,
+  title={Interacting with graphics},
+  author={Unwin, Antony and Theus, Martin and Hofmann, Heike and Unwin, Antony},
+  journal={Graphics of Large Datasets: Visualizing a Million},
+  pages={73--101},
+  year={2006},
+  publisher={Springer}
 }
 
 @Book{		  unwin2018,
